*SVN*

* Add support for FrontBase (http://www.frontbase.com/) with a new adapter thanks to the hard work of one Mike Laster. Closes #4093. [mlaster@metavillage.com]

* Add warning about the proper way to validate the presence of a foreign key. Closes #4147. [Francois Beausoleil <francois.beausoleil@gmail.com>]

* Fix syntax error in documentation. Closes #4679. [mislav@nippur.irb.hr] 

* Add Oracle support for CLOB inserts. Closes #4748. [schoenm@earthlink.net sandra.metz@duke.edu] 

* Various fixes for sqlserver_adapter (odbc statement finishing, ado schema dumper, drop index). Closes #4831. [kajism@yahoo.com]

* Add support for :order option to with_scope. Closes #3887. [eric.daspet@survol.net]

* Prettify output of schema_dumper by making things line up. Closes #4241 [Caio  Chassot <caio@v2studio.com>]

* Make build_postgresql_databases task make databases owned by the postgres user. Closes #4790. [mlaster@metavillage.com]

* Sybase Adapter type conversion cleanup. Closes #4736. [dev@metacasa.net]

* Fix bug where calculations with long alias names return null. [Rick]

* Raise error when trying to add to a has_many :through association.  Use the Join Model instead. [Rick]

    @post.tags << @tag                  # BAD
    @post.taggings.create(:tag => @tag) # GOOD

* Allow all calculations to take the :include option, not just COUNT (closes #4840) [Rick]

* Update inconsistent migrations documentation. #4683 [machomagna@gmail.com]

* Add ActiveRecord::Errors#to_xml [Jamis Buck]

* Properly quote index names in migrations (closes #4764) [John Long]

* Fix the HasManyAssociation#count method so it uses the new ActiveRecord::Base#count syntax, while maintaining backwards compatibility.  [Rick]

* Ensure that Associations#include_eager_conditions? checks both scoped and explicit conditions [Rick]

* Associations#select_limited_ids_list adds the ORDER BY columns to the SELECT DISTINCT List for postgresql. [Rick]
